--- a/ecoli_resistance.ipynb
+++ b/ecoli_resistance.ipynb
@@ -181,8 +181,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"untrimmed_quality1.png\">\n",
-    "<img src=\"untrimmed_quality2.png\">"
+    "<img src=\"images/untrimmed_quality1.png\">\n",
+    "<img src=\"images/untrimmed_quality2.png\">"
    ]
   },
   {
@@ -244,8 +244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"quality1.png\">\n",
-    "<img src=\"quality2.png\">"
+    "<img src=\"images/quality1.png\">\n",
+    "<img src=\"images/quality2.png\">"
    ]
   },
   {
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp_all.png\">"
+    "<img src=\"images/snp_all.png\">"
    ]
   },
   {
@@ -655,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp1.png\">"
+    "<img src=\"images/snp1.png\">"
    ]
   },
   {
@@ -677,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp2.png\">"
+    "<img src=\"images/snp2.png\">"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp3.png\">"
+    "<img src=\"images/snp3.png\">"
    ]
   },
   {
@@ -720,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp4.png\">"
+    "<img src=\"images/snp4.png\">"
    ]
   },
   {
@@ -742,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"snp5.png\">"
+    "<img src=\"images/snp5.png\">"
    ]
   },
   {
