--- a/ecoli_resistance.ipynb
+++ b/ecoli_resistance.ipynb
@@ -749,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sinymous mutation"
+    "Synonymous mutation"
    ]
   }
  ],
