--- a/ecoli_outbreak_investigation.ipynb
+++ b/ecoli_outbreak_investigation.ipynb
@@ -480,6 +480,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"images/mauve_align.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 8. Tracing the source of toxin genes in E. coli X"
    ]
   },
@@ -576,8 +583,23 @@
    "source": [
     "Once again we look at mauve allignment to find out how the new resistance was obtained.\n",
     "We can see multiple phage proteins, mobile element proteins and trasposase.\n",
-    "This "
+    "These facts make us think that the genes were exchanged with a prophage by a horizontal genetic transfer (HGT). "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/phage.png\">\n",
+    "<img src=\"images/mobile_element.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
