--- a/tardigrades_from_genestealers_to_space_marines .ipynb
+++ b/tardigrades_from_genestealers_to_space_marines .ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functional annotation.\n"
+    "## 4 Functional annotation.\n"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 Local"
+    "## 5 Local Blastp"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6b. TargetP 1.1 Server\n"
+    "## 6b. TargetP Server\n"
    ]
   },
   {
@@ -489,17 +489,17 @@
     "|--|--|--|--|--|--|\n",
     "|g2203.t1  |Myogenesis-regulating glycosidase |75|2e-126|35.93|Q69ZQ1.2|\n",
     "|g3428.t1  |Myosin regulatory light chain | 91 | 8e-65 | 56.60 | Q09510.1 |\n",
-    "|g5443.t1  |No significant similarity found. ||||||\n",
+    "|g5443.t1  |No significant similarity found. |||||\n",
     "|g5927.t1  |Glucosamine 6-phosphate N-acetyltransferase|14 | 1e-18 |\t38.64 | Q17427.1|\n",
-    "|g7861.t1  |SWI/SNF-related matrix-associated actin-dependent regulator of chromatin subfamily A-like protein 1|99|2e-71|37.21|B4F769.1||\n",
+    "|g7861.t1  |SWI/SNF-related matrix-associated actin-dependent regulator of chromatin subfamily A-like protein 1|99|2e-71|37.21|B4F769.1|\n",
     "|g8100.t1  |Inositol monophosphatase 3 | 22 | 3e-46 |\t36.04 |\tQ2YDR3.1 |\n",
     "|g8312.t1  |Vacuolar protein sorting-associated protein 41 homolog | 84 |\t0.0 |\t40.84|\tQ5KU39.1|\n",
-    "|g10513.t1 |No significant similarity found. ||||||\n",
-    "|g10514.t1 |No significant similarity found.||||||\n",
+    "|g10513.t1 |No significant similarity found. |||||\n",
+    "|g10514.t1 |No significant similarity found.|||||\n",
     "|g11513.t1 |Trafficking protein particle complex subunit 9| 68 | 6e-83 |\t28.61|\tQ32PH0.1 |\n",
-    "|g11806.t1 |No significant similarity found.||||||\n",
+    "|g11806.t1 |No significant similarity found.|||||\n",
     "|g11960.t1 |E3 ubiquitin-protein ligase BRE1B |\t96 |\t6e-98|\t26.96|\tQ8CJB9.1|\n",
-    "|g13530.t1 |No significant similarity found. ||||||\n",
+    "|g13530.t1 |No significant similarity found. |||||\n",
     "|g14472.t1 |Damage suppressor protein|100|0|100|P0DOW4.1|\n",
     "|g15484.t1 |Vacuolar protein sorting-associated protein 51 homolog |78|\t0.0|\t45.03|\tQ155U0.1|\n",
     "|g16318.t1 |Eukaryotic translation initiation factor 3 subunit A| 40|\t4e-08|\t36.11|\tA2VD00.1|\n",
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HMMSCAN\n",
+    "## 8 HMMSCAN\n",
     "Only matches are presented in the table"
    ]
   },
@@ -535,6 +535,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supplementary materials and files can be found  at https://github.com/smetam/bioworkshop/tree/master/tardigrades_supplimentary"
+   ]
   },
   {
    "cell_type": "code",
