--- a/H+/lab06_hplus.ipynb
+++ b/H+/lab06_hplus.ipynb
@@ -205,8 +205,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"prof.ethnicity.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b. Annotation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!java -Xmx4g -jar ~/Downloads/snpEff_latest_core/snpEff/snpEff.jar -c ~/Downloads/snpEff_latest_core/snpEff/snpEff.config -v \"GRCh37.75\" ~/Bioinf/Workshop/bioworkshop/H+/professor_intersected.vcf > prof.eff.vcf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Where are we going?\n",
+    "### a. Fixes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,18 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rs1039898\n",
-      "{'description': 'Benign', 'last_evaluated': '2016/06/14 00:00', 'review_status': 'criteria provided, single submitter'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 600\n",
     "for snp_id in df['ID'].values[i, i + 200]:\n",
@@ -271,30 +293,6 @@
     "        allele_freq_list = [float(x['FREQ'][2:5]) for x in summary['GLOBAL_MAFS']]\n",
     "        allele_freq = sum(allele_freq_list) / len(allele_freq_list)\n",
     "        print(allele_freq)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### b. Annotation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!java -Xmx4g -jar ~/Downloads/snpEff_latest_core/snpEff/snpEff.jar -c ~/Downloads/snpEff_latest_core/snpEff/snpEff.config -v \"GRCh37.75\" ~/Bioinf/Workshop/bioworkshop/H+/professor_intersected.vcf > prof.eff.vcf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Where are we going?\n",
-    "### a. Fixes"
    ]
   },
   {
